Fixed search alignment

--- a/styleguide_assets/aigis_assets/styles/theme.css
+++ b/styleguide_assets/aigis_assets/styles/theme.css
@@ -126,6 +126,7 @@
 	display: none;
 	position: relative;
 	font-size: 16px;
+	margin-bottom: 0;
 }
 
 .aigis-search-icon {
